k0s/manifests/litellm/kustomize/main/base/resources/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  name: litellm
  namespace: litellm
  labels:
    app.kubernetes.io/name: litellm
    app.kubernetes.io/instance: litellm
    app.kubernetes.io/version: "main-v1.80.11-stable"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: litellm
      app.kubernetes.io/instance: litellm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: litellm
        app.kubernetes.io/instance: litellm
        app.kubernetes.io/version: "main-v1.81.3-stable"
    spec:
      serviceAccountName: default
      securityContext: {}
      containers:
        - name: litellm
          securityContext: {}
          image: "ghcr.io/berriai/litellm-database:main-v1.81.3-stable"
          imagePullPolicy: IfNotPresent
          envFrom: []
          args:
            - --config
            - /etc/litellm/config.yaml
            
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/liveliness
              port: "http"
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: "http"
          startupProbe:
            httpGet:
              path: /health/readiness
              port: "http"
            failureThreshold: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2
              memory: 4Gi

          volumeMounts:
            - name: litellm-config
              mountPath: /etc/litellm/
          
      volumes:
        - name: litellm-config
          configMap:
            name: litellm-config
            items:
              - key: config.yaml
                path: "config.yaml"
      terminationGracePeriodSeconds: 90
