k0s/manifests/litellm/kustomize/main/base/resources/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: litellm
  labels:
    app.kubernetes.io/name: litellm
    app.kubernetes.io/instance: litellm
    app.kubernetes.io/version: "v1.80.11-stable"
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: litellm
    app.kubernetes.io/instance: litellm
